# aparavi_data_suite_mcp

./: .dockerignore  .env.docker  .env.example  .gitignore  APARAVI default reports 07312025.json  APARAVI_CLIENT_ID_AUTO_DISCOVERY_CHANGES.md  DOCKER.md  Dockerfile  README.md  aparavi_aql_reports.md  docker-compose.yml  mcp_development_prompt.md  pyproject.toml  test_aparavi_direct.py  test_error_handling.py  test_mcp_manual.py
claudedesktop/: claude_desktop_config.json  claude_desktop_config_docker.json  claude_desktop_config_mac.json  claude_desktop_config_windows.json
config/: aparavi_reports.json  claude_desktop_config.json  claude_desktop_config_docker.json  claude_desktop_config_windows.json  config.example.yaml
references/: aparavi_aql_reports.md  aql_ref.json  referenceprompt.md
scripts/: aparavi_sql_report.sql  docker-build.ps1  docker-run.ps1  run-all-reports.ps1  sample.json  simple_mcp_test.py  start_server.py  start_server_claude.py  test_generate_aql_query.py  test_mcp_manual.py
src/aparavi_mcp/: __init__.py  aparavi_client.py  config.py  docker_server.py  server.py  utils.py
src/aparavi_mcp/tools/: __init__.py
tests/: __init__.py  tagging_api_test.py  test_mcp_simple.py  test_mcp_tools.py
