[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aparavi-mcp-server"
version = "0.1.0"
description = "MCP server for APARAVI DATA SUITE"
authors = [
    {name = "Aparavi Team", email = "support@aparavi.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.8.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aparavi_mcp"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
aparavi-mcp-server = "aparavi_mcp.server:main"
